--- a/src/Movie Search/Movie.css
+++ b/src/Movie Search/Movie.css
@@ -76,7 +76,7 @@ small {
 .card {
     padding: 2rem 4rem;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+/*     box-shadow: 1px 1px 5px rgba(0,0,0,0.25); */
     margin-bottom: 2rem;
     background-color: white;
 }
